--- a/misc/deploy-galera.yml
+++ b/misc/deploy-galera.yml
@@ -1,7 +1,7 @@
 ---
-- hosts: database
+- hosts: RDBMS
   vars:
-    dbmaster_node: "{{ groups['database'][0] }}"
+    dbmaster_node: "{{ groups['RDBMS'][0] }}"
 #---------------------------------------------------------------------
   tasks:
   - name: Install docker
@@ -15,7 +15,11 @@
       update_cache: yes
     loop:
       - tcpdump
-      - python-docker
+
+  - name: Install the bare necessities (pip)
+    pip:
+      name:
+        - docker[tls]==4.3.1
 
   - name: Mount /database-galera in tmpfs to store MariaDB
     mount:
@@ -59,12 +63,12 @@
         MYSQL_ROOT_PASSWORD=my-secret-pw
       command: >
         --wsrep-new-cluster
-        --wsrep_node_address="{{ hostvars[inventory_hostname]['ansible_' + database]['ipv4']['address'] }}"
+        --wsrep_node_address="{{ hostvars[inventory_hostname]['ansible_' + RDBMS]['ipv4']['address'] }}"
     when: inventory_hostname == dbmaster_node
 
   - name: Waiting for the MariaDB-Galera first database to be ready
     wait_for:
-      host: "{{ hostvars[dbmaster_node]['ansible_' + database]['ipv4']['address'] }}"
+      host: "{{ hostvars[dbmaster_node]['ansible_' + RDBMS]['ipv4']['address'] }}"
       port: 3306
     when: inventory_hostname == dbmaster_node
 
@@ -95,11 +99,11 @@
       volumes:
         - /database-galera/mysql.conf.d:/etc/mysql/conf.d
         - /database-galera/data:/var/lib/mysql
-      command: --wsrep_node_address="{{ hostvars[inventory_hostname]['ansible_' + database]['ipv4']['address'] }}"
+      command: --wsrep_node_address="{{ hostvars[inventory_hostname]['ansible_' + RDBMS]['ipv4']['address'] }}"
     when: inventory_hostname != dbmaster_node
 
   - name: Waiting for the MariaDB-Galera other databases to be ready
     wait_for:
-      host: "{{ hostvars[inventory_hostname]['ansible_' + database]['ipv4']['address'] }}"
+      host: "{{ hostvars[inventory_hostname]['ansible_' + RDBMS]['ipv4']['address'] }}"
       port: 3306
     when: inventory_hostname != dbmaster_node
