--- a/misc/deploy-galera.yml
+++ b/misc/deploy-galera.yml
@@ -48,7 +48,7 @@
       image: "mariadb:10.1"
       detach: True
       exposed_ports:
-        - 4567
+        - "4567"
       published_ports:
         - "3306:3306"
         - "4567:4567"
@@ -63,12 +63,12 @@
         MYSQL_ROOT_PASSWORD=my-secret-pw
       command: >
         --wsrep-new-cluster
-        --wsrep_node_address="{{ hostvars[inventory_hostname]['ansible_' + RDBMS]['ipv4']['address'] }}"
+        --wsrep_node_address="{{ hostvars[inventory_hostname][RDBMS_role + '_ipv4'] }}"
     when: inventory_hostname == dbmaster_node
 
   - name: Waiting for the MariaDB-Galera first database to be ready
     wait_for:
-      host: "{{ hostvars[dbmaster_node]['ansible_' + RDBMS]['ipv4']['address'] }}"
+      host: "{{ hostvars[dbmaster_node][RDBMS_role + '_ipv4'] }}"
       port: 3306
     when: inventory_hostname == dbmaster_node
 
@@ -89,7 +89,7 @@
       image: "mariadb:10.1"
       detach: True
       exposed_ports:
-        - 4567
+        - "4567"
       published_ports:
         - "3306:3306"
         - "4567:4567"
@@ -99,11 +99,11 @@
       volumes:
         - /database-galera/mysql.conf.d:/etc/mysql/conf.d
         - /database-galera/data:/var/lib/mysql
-      command: --wsrep_node_address="{{ hostvars[inventory_hostname]['ansible_' + RDBMS]['ipv4']['address'] }}"
+      command: --wsrep_node_address="{{ hostvars[inventory_hostname][RDBMS_role + '_ipv4'] }}"
     when: inventory_hostname != dbmaster_node
 
   - name: Waiting for the MariaDB-Galera other databases to be ready
     wait_for:
-      host: "{{ hostvars[inventory_hostname]['ansible_' + RDBMS]['ipv4']['address'] }}"
+      host: "{{ hostvars[inventory_hostname][RDBMS_role + '_ipv4'] }}"
       port: 3306
     when: inventory_hostname != dbmaster_node
